--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     justify-content:center;
     align-items:center;
     min-height: 100vh;
+    font-family: Arial, Helvetica, sans-serif,sans-serif;
 }
 .container{
     position: relative;
@@ -121,7 +122,7 @@ a{
 .title2{
     color: #003147;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 0px;
     margin-bottom: 10px;
 }
 p{
@@ -157,21 +158,6 @@ p{
     text-transform: uppercase;
     color: #848c99;
     font-weight: 500;
-}
-.skills .box2 .percent{
-    position: relative;
-    width: 100%;
-    height: 10px;
-    margin-top: 5px;
-    background: #f0f0f0;
-    align-items: inline;
-}
-.skills .box2 .percent div{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    background: #03a9f4;
 }
 .interest ul{
    display: grid;
